# pyproject.toml - Central configuration for all tools

[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    # linting tools for development
    "black==25.1.0",
    "flake8==7.2.0",
    "Flake8-pyproject==1.2.3",
    "isort==6.0.1",
    "numpy>=2.3.0",
    "opencv-contrib-python>=4.11.0.86",
]


### Linting tools

# NOTE: The following line length values must be kept in sync:
# - tool.black.line-length = 120
# - tool.isort.line_length = 120
# - tool.flake8.max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
(
    \.eggs
  | \.git
  | __pycache__
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv/.*
  | _build
  | buck-out
  | build
  | dist
  | \.egg-info
)
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    ".eggs",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "*/venv/*",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*.egg-info",
]

[tool.flake8]
max-line-length = 120
ignore = [
  # Indentation and whitespace
  "E121", "E126", "E127", "E128","E203", "W391", "W503", "W504",
  # import order -- use isort for this
  "I201", "I202",
]
max-complexity = 15
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "*/venv/*",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*.egg-info",
]
